make sure the logo aligns well with the line in price-info widget

--- a/css/humm-branding.scss
+++ b/css/humm-branding.scss
@@ -39,13 +39,14 @@ $HUMM_DARK_GRAY: #333333;
         height: 15px !important;
         float: none !important;
         width: auto;
+        vertical-align: baseline;
     }
 
     .description {
         display: inline-block;
         font-size: 16px;
         font-weight: 300;
-        vertical-align: text-bottom;
+        vertical-align: baseline;
         .main {
             margin-right: 6px;
             white-space: nowrap;
